fixed outlink selector problems, fixed dropdown line-breaking issues, added section-grid class, fixed some spacing issues

--- a/static/style/common.css
+++ b/static/style/common.css
@@ -35,11 +35,11 @@ a {
     color: var(--red);
 }
 
-.content a:is([href^="http:"],[href^="https:"],[href^="//"]):not([href*="//*mkeydsa"]):after {
+.content a:is([href^="http:"],[href^="https:"],[href^="//"]):not([href*="mkeydsa"]):after {
     content: url('/static/img/outlink.svg');
 }
 
-.content a:is([href^="http:"],[href^="https:"],[href^="//"]):not([href*="//*mkeydsa"]):hover:after {
+.content a:is([href^="http:"],[href^="https:"],[href^="//"]):not([href*="mkeydsa"]):hover:after {
     content: url('/static/img/outlink-hover.svg');
 }
 
@@ -94,7 +94,7 @@ aside h2 {
 }
 
 .dropdown-content li {
-    width: 415px;
+    white-space: nowrap;
 }
 
 .dropdown-content a {
@@ -110,6 +110,28 @@ aside h2 {
 .dropdown-label:hover .dropdown-content {
     display: flex;
     flex-direction: column;
+}
+
+.section-grid > .flex {
+    flex-direction: column;
+}
+
+.section-grid > div > *  {
+    padding: calc(var(--spacing) / 2);
+    margin-bottom: var(--spacing);
+}
+
+.section-grid > div > a {
+    background-color: white;
+    border: var(--black) solid 2px;
+    border-radius: 10px;
+}
+
+.section-grid > div > div {
+    width: 50%;
+    margin: 0;
+    padding: 0;
+    flex-shrink: 0;
 }
 
 /**************/
@@ -189,6 +211,10 @@ main {
     padding: 0 calc(var(--spacing) / 2);
 }
 
+main > .flex {
+    flex-direction: column;
+}
+
 .content {
     width: 100%;
 }
@@ -222,27 +248,46 @@ main {
     }
 
     aside {
-        margin-left: auto;
-        margin-right: 0;
-        max-width: 300px;
+        max-width: 360px;
     }
 
     main {
-        padding: 0 var(--spacing);
+        padding: calc(var(--spacing) / 2) var(--spacing);
+    }
+
+    main > .flex {
+        display: flex !important;
     }
 
     .hero h1 {
         width: 100%;
         margin: 0 var(--spacing);
     }
+
+    
+}
+
+@media screen and (min-width: 768px) {
+    .section-grid > .flex {
+        flex-direction: row !important;
+    }
+
+    .section-grid > div > * {
+        max-width: 50%;
+    }
+
+    .section-grid > div > a {
+        margin-left: calc(var(--spacing) / 2);
+    }
+
+    .section-grid > div > a:first-of-type {
+        margin-right: calc(var(--spacing) / 2);
+        margin-left: 0;
+    }
 }
 
 @media screen and (max-width: 768px) {
     .hero {
         background-image: none !important;
-    }
-
-    main > .flex {
-        display: block !important;
     }
 }
